# documind

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  constraints.txt  package-lock.json  package.json  pyproject.toml
docs/: diagrams-architecture-rendering.md
scripts/: dev-kill.mjs  dev.mjs  install-all.mjs  install-playwright.mjs  lib.mjs  run-api.mjs  run-python.mjs
setup/: README.ko.md  README.md
setup/compose/: docker-compose.app.yml  env.sample
setup/images/api/: Dockerfile
setup/images/web/: Dockerfile
src/: __init__.py  __main__.py  cli.py  engine.py  main.py
src/agents/: __init__.py  loader.py  research_intent.py
src/agents/configs/: audience.json  content_writer.json  document_intent.json  document_planner.json  narrative.json  research.json  template_designer.json
src/agents/nodes/: __init__.py  audience.py  content_writer.py  narrative.py  research.py
src/agents/prompts/: audience.md  content_writer.md  narrative.md  research.md
src/api/: __init__.py
src/api/v1/: chat.py  documents.py  settings.py  system.py  templates.py  users.py
src/conversion/: __init__.py  css_classifier.py  layout_resolver.py  pipeline.py
src/core/: __init__.py  bootstrap.py  config.py  exceptions.py  logging.py  runtime.py
src/formats/: __init__.py  base.py  registry.py
src/formats/docx/: __init__.py  engine.py  orchestrator.py  preview.py  renderer.py
src/formats/html/: __init__.py  engine.py  renderer.py
src/formats/hwp/: __init__.py  engine.py  orchestrator.py  renderer.py
src/formats/md/: __init__.py  engine.py  orchestrator.py  renderer.py
src/formats/pdf/: __init__.py  engine.py  orchestrator.py  renderer.py
src/formats/pptx/: __init__.py  color_utils.py  css_spec.py  engine.py  master_context.py  orchestrator.py  qa.py  renderer.py  template_visual.py  visual_renderer.py
src/formats/rich_document/: __init__.py  orchestrator.py  quality.py  spec.py  template_analysis.py
src/formats/xlsx/: __init__.py  engine.py  orchestrator.py  renderer.py
src/infrastructure/: __init__.py  database.py  llm.py  models.py  storage.py  web_search.py
src/schemas/: __init__.py  agents.py  api.py
src/utils/: __init__.py  iconify.py  image_gen.py  json_repair.py  language.py  units.py
tests/: test_pptx_layout_contract.py  test_revision_contract.py
web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/hooks/: useSessions.ts  useTranslation.ts
(+129 files in other folders)
