[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documind"
version = "0.2.0"
description = "DocuMind - Agentic AI Document Generation Platform"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",

    # Agent orchestration
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",

    # LLM
    "openai>=1.30",
    "httpx>=0.27",
    "tiktoken>=0.7",

    # Document generation
    "python-pptx>=1.0",
    "lxml>=5.2",
    "Pillow>=10.3",

    # Browser automation
    "playwright>=1.44",

    # Utilities
    "tinycss2>=1.3",
    "beautifulsoup4>=4.12",
    "html5lib>=1.1",
    "numpy>=1.26",
    "jinja2>=3.1",
    "aiofiles>=24.1",
    "uuid6>=2024.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
# LLM Providers (install what you need)
anthropic = ["langchain-anthropic>=0.2", "anthropic>=0.30"]
azure = ["langchain-openai>=0.2"]
# Pin <1.0 to stay compatible with langchain-core 0.3 (langgraph)
bedrock = ["langchain-aws>=0.2.17,<1.0", "boto3>=1.34"]
gcp-vertex = ["langchain-google-vertexai>=2.0"]
gemini = ["langchain-google-genai>=2.0"]

# Infrastructure
postgres = ["asyncpg>=0.29"]
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.16"]
vlm-qa = ["scikit-image>=0.23"]

# All providers bundle
all-providers = [
    "langchain-anthropic>=0.2",
    "langchain-aws>=0.2",
    "langchain-google-vertexai>=2.0",
    "langchain-google-genai>=2.0",
    "boto3>=1.34",
]

dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.licensecheck]
allowed = ["MIT", "Apache-2.0", "BSD-2-Clause", "BSD-3-Clause", "PSF-2.0", "ISC", "HPND"]
denied = ["GPL-3.0", "AGPL-3.0", "LGPL-3.0", "Commercial", "Proprietary"]
